--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">PopularMovies</string>
     <string name="title_movie_detail">Movie Detail</string>
+    <string name="tab_movie_detail">Detail</string>
+    <string name="tab_movie_video">Video</string>
 
     <string name="action_settings">Settings</string>
     <string name="action_share">Share</string>
