--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,10 @@
     <string name="tab_movie_video">Video</string>
     <string name="tab_movie_review">Review</string>
 
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="navigation_drawer_discover">Discover</string>
+    <string name="navigation_drawer_favourite">Favourite</string>
+    <string name="navigation_drawer_settings">Settings</string>
 
 </resources>
