Implement play button on backdrop image.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,9 @@
     <string name="tab_movie_video">Video</string>
     <string name="tab_movie_review">Review</string>
 
+    <string name="downloading_video_list">Downloading video list, please try again later.</string>
+    <string name="no_video_available">No video available for this movie.</string>
+
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="navigation_drawer_discover">Discover</string>
