--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,7 @@
     <string name="navigation_drawer_favourite">Favourite</string>
     <string name="navigation_drawer_settings">Settings</string>
 
+    <string name="msg_no_movie">Please check your network connection.</string>
+    <string name="msg_no_favourite_movie">Add your favourite movies from discovery page.</string>
+
 </resources>
