--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,12 @@
     <string name="action_settings">Settings</string>
     <string name="detail_poster_transition_name" translatable="false">detail_poster_transition</string>
 
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="navigation_drawer_discover">Discover</string>
+    <string name="navigation_drawer_favourite">Favourite</string>
+    <string name="navigation_drawer_settings">Settings</string>
+    
     <string name="tab_movie_detail">Detail</string>
     <string name="tab_movie_video">Video</string>
     <string name="tab_movie_review">Review</string>
