--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -10,5 +10,24 @@
 
     <string name="caption_share">Share</string>
     <string name="caption_share_hash_tag">\u0020#PopularMovie</string>
-
+    
+    <string name="caption_genre_action">Action</string>
+    <string name="caption_genre_adventure">Adventure</string>
+    <string name="caption_genre_animation">Animation</string>
+    <string name="caption_genre_comedy">Comedy</string>
+    <string name="caption_genre_crime">Crime</string>
+    <string name="caption_genre_documentary">Documentary</string>
+    <string name="caption_genre_drama">Drama</string>
+    <string name="caption_genre_family">Family</string>
+    <string name="caption_genre_fantasy">Fantasy</string>
+    <string name="caption_genre_history">History</string>
+    <string name="caption_genre_horror">Horror</string>
+    <string name="caption_genre_music">Music</string>
+    <string name="caption_genre_mystery">Mystery</string>
+    <string name="caption_genre_romance">Romance</string>
+    <string name="caption_genre_science_fiction">Science Fiction</string>
+    <string name="caption_genre_tv_movie">TV Movie</string>
+    <string name="caption_genre_thriller">Thriller</string>
+    <string name="caption_genre_war">War</string>
+    <string name="caption_genre_western">Western</string>
 </resources>
