--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -10,7 +10,8 @@
 
     <string name="caption_share">Share</string>
     <string name="caption_share_hash_tag">\u0020#PopularMovie</string>
-    
+    <string name="msg_nothing_here">Nothing here.</string>
+
     <string name="caption_genre_action">Action</string>
     <string name="caption_genre_adventure">Adventure</string>
     <string name="caption_genre_animation">Animation</string>
@@ -30,4 +31,5 @@
     <string name="caption_genre_thriller">Thriller</string>
     <string name="caption_genre_war">War</string>
     <string name="caption_genre_western">Western</string>
+
 </resources>
