--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -3,6 +3,9 @@
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="navigation_drawer_discover">Discover</string>
+    <string name="navigation_drawer_favourite">Favourite</string>
+    <string name="navigation_drawer_settings">Settings</string>
     <string name="caption_settings">Settings</string>
     <string name="caption_tab_movie_detail">Detail</string>
     <string name="caption_tab_movie_video">Video</string>
